--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Produce statistics for lessons on students.unipi.gr
+Statistics generator for results on students.unipi.gr
+----------------------------------------------------
+
+Usage: java -jar GradeStats.jar URL
+URL - The url of the results page of the lesson you are interested in.
