--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Usage
     $keytool -import -v file ssl/students.unipi.gr -keystore ssl/GradeStats.jks -storepass GradeStatsPass
   You should trust the certificate, trust me! Of course you can change
   keystore password.
+* Set the keystore location in config file. (default ssl/GradeStats.jks)
 * If you want to use the gui version, just type ant run.
 * If you want to use the command line version, type 
     $java -jar build/jar/GradeStats.jar URL
